# hecate-search

./: .gitignore  README.md
autocomplete/: Cargo.toml  README.md
autocomplete/src/: main.rs
hecate-api/: .env  Cargo.toml  README.md  sample_data.txt
hecate-api/sql/: select_concept_by_id.sql  select_concept_for_non_numeric_input.sql  select_concept_for_numeric_input.sql  select_phoebe_concepts.sql  select_related_concepts.sql
hecate-api/src/: api.rs  config.rs  db.rs  domain.rs  embeddings.rs  errors.rs  main.rs  qdrant.rs  umls.rs
hecate-ui/: README.md  index.html  package-lock.json  package.json
hecate-ui/src/: App.css  App.tsx  index.css  main.tsx
hecate-ui/src/@types/: data-source.d.ts
hecate-ui/src/components/: ConceptHierarchyTable.tsx  ConceptTable.tsx  ConceptView.tsx  Header.tsx  RelatedConceptsView.tsx
hecate-ui/src/service/: concepts.tsx  search.tsx
